--- a/style.css
+++ b/style.css
@@ -25,3 +25,13 @@ max-width: 1200px;
 width: 100%;
 margin: 0 auto;
 }
+
+.titulo-principal{
+    text-align: left;
+    width: 100%;
+    font-size: 32px;
+}
+
+.titulo-principal span{
+    color: var(--rosa);
+}
