--- a/style.css
+++ b/style.css
@@ -35,3 +35,15 @@ margin: 0 auto;
 .titulo-principal span{
     color: var(--rosa);
 }
+
+.botao{
+    font-family: "Chakra Petch", sans-serif;
+    background-color: var(--botao-inativo);
+    color: var(--branco);
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    font-size: 18px;
+    align-items: center;
+    width: 100%;
+}
