--- a/style.css
+++ b/style.css
@@ -51,3 +51,13 @@ margin: 0 auto;
     border-right: 2px solid var(--botao-ativo);
     border-top: none;
 }
+
+.botoes {
+    display: block;
+}
+@media screen and (min-width: 768px) {
+    .botoes {
+        display: flex;
+    }
+    
+}
